--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -1,4 +1,4 @@
-name: OrangeFox [OFRP] - NON-VANILLA A-ONLY + CRB TOOL ✅ DISK FIXED
+name: OrangeFox [OFRP] - NON-VANILLA BUILD ✅
 
 on:
   workflow_dispatch:
@@ -13,159 +13,297 @@ on:
         description: 'Custom Recovery Tree *REQUIRED*'
         required: true
       DEVICE_TREE_BRANCH:
-        description: 'Device Tree Branch'
+        description: 'Custom Recovery Tree Branch'
         required: true
         default: 'main'
       DEVICE_PATH:
-        description: 'Device path'
+        description: 'Specify your device path.'
         required: true
-        default: 'device/samsung/m14x'
+        default: 'device/tecno/KJ5'
       DEVICE_NAME:
-        description: 'Device Codename'
+        description: 'Specify your Device Codename.'
         required: true
-        default: 'm14x'
+        default: 'KJ5'
       BUILD_TARGET:
-        description: 'Build Target'
+        description: 'Specify your Build Target'
         required: true
-        default: 'recovery'
+        default: 'vendorboot'
         type: choice
         options: [boot, recovery, vendorboot]
-      ECHO_DEBUG:
-        description: 'ECHO Flags Only (DEBUG)'
+      LDCHECK:
+        description: 'Path of blobs to check' 
+        required: true
+        default: 'system/bin/qseecomd'
+      RECOVERY_TAR:
+        description: 'Release recovery.tar For Samsung devices'
         required: false
         default: false
         type: boolean
-      CRB_PREP:
-        description: 'Prepare CRB Kitchen Files'
-        required: false
-        default: false
+      RECOVERY_INSTALLER:
+        description: 'Include recovery installer zip'
         type: boolean
+        required: true
+        default: true
 
 jobs:
   build:
-    name: Build OFRP + CRB by ${{ github.actor }}
+    name: Build OFRP NON-VANILLA by ${{ github.actor }}
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
+    if: github.repository_owner == github.event.sender.login
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      contents: write
+      id-token: write
+
     steps:
-    - name: 🔥 Manual Disk Cleanup (SAFE)
-      run: |
-        # Safe cleanup - no filesystem creation
-        sudo rm -rf /usr/share/dotnet /opt/hostedtoolcache /usr/local/lib/android
-        sudo apt clean
-        docker system prune -af || true
-        df -h .
-        echo "✅ Disk cleaned (no lost+found created)"
-
-    - name: 🔥 8GB Swap (Safe)
-      run: |
-        sudo fallocate -l 8G /swapfile
-        sudo chmod 600 /swapfile
-        sudo mkswap /swapfile
-        sudo swapon /swapfile
-        echo 'vm.swappiness=10' | sudo tee -a /etc/sysctl.conf
-        free -h
-        echo "✅ 8GB Swap ready!"
-
-    - name: Checkout (Now Safe)
+    - name: Checkout
       uses: actions/checkout@v4
       with:
-        fetch-depth: 1
+        fetch-depth: 0
 
     - name: Display Inputs
       run: |
-        echo "Manifest: ${{ github.event.inputs.MANIFEST_BRANCH }}"
-        echo "Device: ${{ github.event.inputs.DEVICE_NAME }}"
-        echo "ECHO: ${{ github.event.inputs.ECHO_DEBUG }}"
-        echo "CRB: ${{ github.event.inputs.CRB_PREP }}"
-        df -h .
+        echo "::group::User Environment Variables"
+        echo "Include Recovery Installer: ${{ inputs.RECOVERY_INSTALLER }}"
+        echo "Release recovery.tar: ${{ inputs.RECOVERY_TAR }}"
+        echo "::endgroup::"
 
-    - name: Build Environment
+    - name: Clean-up
+      uses: rokibhasansagar/slimhub_actions@main
+
+    - name: Setup Swap Space (24GB)
+      uses: rayluo/action-swap-space@v1
+      with:
+        swap_size-gb: 24
+
+    - name: Install Build Environment
       run: |
-        sudo apt update && sudo apt install -y git bc bison flex libssl-dev \
-        python3 python-is-python3 ccache repo make clang lld zip unzip wget
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends \
+          bc bison build-essential ccache curl flex g++-multilib gcc-multilib \
+          git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev \
+          lib32z1-dev libelf-dev liblz4-tool libncurses5-dev libsdl1.2-dev \
+          libssl-dev libxml2-utils lzop pngcrush rsync schedtool squashfs-tools \
+          xsltproc zip zlib1g-dev python3 python3-pip clang lld unzip wget tar
+        
+        rm -rf scripts
         git clone https://gitlab.com/OrangeFox/misc/scripts
         cd scripts && sudo bash setup/android_build_env.sh
 
-    - name: Sync OrangeFox (${{ github.event.inputs.MANIFEST_BRANCH }})
+    - name: Sync OrangeFox Manifest
+      if: contains(fromJSON('["11.0", "12.1"]'), inputs.MANIFEST_BRANCH)
       run: |
-        mkdir -p OrangeFox
-        cd OrangeFox
+        mkdir -p ~/OrangeFox
+        cd ~/OrangeFox
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "${{ github.actor }}+${{ github.actor }}@users.noreply.github.com"
         git clone https://gitlab.com/OrangeFox/sync.git
         cd sync
-        ./orangefox_sync.sh --branch ${{ github.event.inputs.MANIFEST_BRANCH }} \
-          --path fox_${{ github.event.inputs.MANIFEST_BRANCH }}
-        echo "✅ Sync complete"
-        df -h .
+        ./orangefox_sync.sh --branch ${{ inputs.MANIFEST_BRANCH }} --path ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
 
     - name: Clone Device Tree
       run: |
-        cd OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
-        git clone ${{ github.event.inputs.DEVICE_TREE }} \
-          -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} \
-          ${{ github.event.inputs.DEVICE_PATH }}
+        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
+        git clone ${{ inputs.DEVICE_TREE }} -b ${{ inputs.DEVICE_TREE_BRANCH }} ${{ inputs.DEVICE_PATH }}
+        cd ${{ inputs.DEVICE_PATH }}
+        echo "DEVICE_TREE_COMMIT=$(git rev-parse HEAD)" >> $GITHUB_ENV
         echo "✅ Device tree cloned!"
 
-    - name: 🔥 INJECT FLAGS (Method 4 - Compact)
+    - name: 🔥 INJECT NON-VANILLA FLAGS (FOX_AVB Style)
       run: |
-        MODE="${{ github.event.inputs.ECHO_DEBUG && 'ECHO' || 'REAL' }}"
-        cd "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/${{ github.event.inputs.DEVICE_PATH }}"
+        echo "::group::🔥 NON-VANILLA BUILD FLAGS"
+        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}
         
-        if [ "$MODE" = "REAL" ]; then
-          printf '%s
-' \
-            "FOX_VARIANT := samsung" \
-            "FOX_VANILLA_BUILD := 0" \
-            "FOX_AB_DEVICE := 0" \
-            "OF_PATCH_AVB20 := 1" \
-            "OF_SUPPORT_GSI_FLASHING := 1" \
-            "FOX_USE_NANO_EDITOR := 1" \
-            "" >> BoardConfig.mk
-          echo "✅ REAL FLAGS (6)"
-        else
-          printf '%s
-' \
-            "# ECHO DEBUG MODE" \
-            "echo FOX_VARIANT := samsung" \
-            "echo FOX_VANILLA_BUILD := 0" \
-            "" >> BoardConfig.mk
-          echo "✅ ECHO MODE"
-        fi
-        tail -8 BoardConfig.mk
+        # 🔥 NON-VANILLA BUILD FLAGS - BoardConfig.mk echo style
+        declare -a NON_VANILLA_FLAGS=(
+          # 🔥 NON-VANILLA CORE (Explicitly disables vanilla mode)
+          "FOX_VANILLA_BUILD := 0"
+          "OF_DISABLE_MIUI_SPECIFIC_FEATURES := 0"
+          
+          # AVB Flags
+          "FOX_AVB := 1"
+          "OF_PATCH_AVB20 := 1"
+          
+          # Core Flags
+          "FOX_VARIANT := samsung"
+          "FOX_AB_DEVICE := 0"
+          
+          # Samsung Flags
+          "FOX_DYNAMIC_SAMSUNG_FIX := 1"
+          "OF_SAMSUNG_SPECIAL := 1"
+          
+          # Partition & Boot
+          "OF_USE_MAGISKBOOT := 1"
+          "OF_USE_MAGISKBOOT_FOR_ALL_PATCHES := 1"
+          "OF_DEFAULT_KEYMASTER_VERSION := 4.1"
+          
+          # Feature Flags
+          "OF_SUPPORT_GSI_FLASHING := 1"
+          "FOX_USE_NANO_EDITOR := 1"
+          "OF_CRYPTPOLICY := 1"
+          "OF_FIX_7ZIP_ZIP := 1"
+          "OF_USE_GREEN_LED := 1"
+          
+          # Advanced NON-VANILLA Features
+          "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER := 1"
+          "OF_QUICK_BACKUP_WIPE := 1"
+          "OF_USE_ASH := 1"
+          "OF_SUPPORT_MIUI_JMIUI_BOOTMODE := 1"
+          "FOX_REPLACE_BUSYBOX_PS := 1"
+        )
+        
+        # Backup original
+        cp -n BoardConfig.mk BoardConfig.mk.backup
+        
+        # Inject NON-VANILLA flags
+        for flag in "${NON_VANILLA_FLAGS[@]}"; do
+          echo "$flag" >> BoardConfig.mk
+        done
+        
+        echo "✅ ${#NON_VANILLA_FLAGS[@]} NON-VANILLA FLAGS injected!"
+        echo "🎯 NON-VANILLA Status: FOX_VANILLA_BUILD := 0 (FULL FEATURES)"
+        echo "📋 Key Flags:"
+        printf '  %s
+' "${NON_VANILLA_FLAGS[@]:0:5}"
+        echo "📋 BoardConfig.mk tail:"
+        tail -10 BoardConfig.mk
+        echo "::endgroup::"
 
-    - name: Build OrangeFox
+    - name: Determine Build Command
+      id: build-cmd
       run: |
-        cd "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}"
-        source build/envsetup.sh
+        if [[ "${{ inputs.MANIFEST_BRANCH }}" == "11.0" || "${{ inputs.MANIFEST_BRANCH }}" == "12.1" ]]; then
+          echo "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
+        else
+          echo "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
+        fi
+        echo "BUILD_DATE=$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
+
+    - name: Build NON-VANILLA OrangeFox
+      run: |
+        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
         export ALLOW_MISSING_DEPENDENCIES=true
         
-        echo "Available targets:"
-        lunch | grep -i ${{ github.event.inputs.DEVICE_NAME }} || echo "Using default"
+        # NON-VANILLA runtime exports
+        export FOX_VANILLA_BUILD=0
+        export OF_DISABLE_MIUI_SPECIFIC_FEATURES=0
+        export FOX_AVB=1
+        export FOX_VARIANT=samsung
         
-        lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng || lunch 1
-        mka ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
+        source build/envsetup.sh
+        echo "::group::Lunch Combos (NON-VANILLA)"
+        lunch | grep -i ${{ inputs.DEVICE_NAME }} || echo "No exact match found"
+        echo "::endgroup::"
+        
+        eval "${{ steps.build-cmd.outputs.command }}"
 
-    - name: 🔥 CRB Package (If Enabled)
-      if: github.event.inputs.CRB_PREP == 'true'
+    - name: Find & Process Recovery Image
+      id: process-image
       run: |
-        mkdir -p crb-output/${{ github.event.inputs.DEVICE_NAME }}
-        cp OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.img \
-          crb-output/${{ github.event.inputs.DEVICE_NAME }}/
-        cd crb-output && zip -r "${{ github.event.inputs.DEVICE_NAME }}-CRB.zip" *
+        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
+        OUT_DIR="out/target/product/${{ inputs.DEVICE_NAME }}"
+        
+        ORANGEFOX_IMG=$(find "$OUT_DIR" -name "OrangeFox*.img" | head -1)
+        
+        if [[ -n "$ORANGEFOX_IMG" ]]; then
+          echo "CHECK_IMG_IS_OK=true" >> $GITHUB_ENV
+          echo "FILE_PATH=$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV
+          echo "ORANGEFOX_IMG=$(basename "$ORANGEFOX_IMG")" >> $GITHUB_ENV
+          echo "MD5_IMG=$(md5sum "$ORANGEFOX_IMG" | cut -d' ' -f1)" >> $GITHUB_ENV
+          echo "image_found=true" >> $GITHUB_OUTPUT
+        else
+          echo "CHECK_IMG_IS_OK=false" >> $GITHUB_ENV
+          echo "::error::No OrangeFox image found!"
+          exit 1
+        fi
 
-    - name: Upload Artifacts
-      if: always()
-      uses: actions/upload-artifact@v4
+    - name: Rename Recovery Image
+      if: env.CHECK_IMG_IS_OK == 'true'
+      run: |
+        cd ${{ env.FILE_PATH }}
+        case "${{ inputs.BUILD_TARGET }}" in
+          "boot") mv "${{ env.ORANGEFOX_IMG }}" boot.img; echo "RECOVERY_TYPE=boot" >> $GITHUB_ENV ;;
+          "recovery") mv "${{ env.ORANGEFOX_IMG }}" recovery.img; echo "RECOVERY_TYPE=recovery" >> $GITHUB_ENV ;;
+          "vendorboot") mv "${{ env.ORANGEFOX_IMG }}" vendor_boot.img; echo "RECOVERY_TYPE=vendor_boot" >> $GITHUB_ENV ;;
+        esac
+        echo "✅ NON-VANILLA ${{ env.RECOVERY_TYPE }}.img ready!"
+
+    - name: Add Recovery Installer
+      if: env.CHECK_IMG_IS_OK == 'true' && inputs.RECOVERY_INSTALLER == 'true'
+      run: |
+        cd ${{ env.FILE_PATH }}
+        wget -q https://github.com/kinguser981/recovery-installer/releases/download/11256427880/recovery-installer.zip
+        zip -ur recovery-installer.zip ${{ env.RECOVERY_TYPE }}.img
+        echo "✅ Recovery installer added"
+
+    - name: Create Samsung TAR
+      if: env.CHECK_IMG_IS_OK == 'true' && inputs.RECOVERY_TAR == 'true'
+      run: |
+        cd ${{ env.FILE_PATH }}
+        tar -cvf ${{ env.RECOVERY_TYPE }}.tar ${{ env.RECOVERY_TYPE }}.img
+        echo "✅ Samsung TAR created"
+
+    - name: Generate Artifact List
+      if: env.CHECK_IMG_IS_OK == 'true'
+      id: artifacts
+      run: |
+        cd ${{ env.FILE_PATH }}
+        FILES=()
+        FILES+=("${{ env.RECOVERY_TYPE }}.img")
+        
+        [[ "${{ inputs.RECOVERY_TAR }}" == "true" ]] && FILES+=("${{ env.RECOVERY_TYPE }}.tar")
+        [[ "${{ inputs.RECOVERY_INSTALLER }}" == "true" ]] && FILES+=("recovery-installer.zip")
+        FILES+=($(find . -name "OrangeFox*.zip" 2>/dev/null || true))
+        
+        echo "files=$(IFS=$'
+'; echo "${FILES[*]}")" >> $GITHUB_OUTPUT
+
+    - name: Create GitHub Release
+      if: env.CHECK_IMG_IS_OK == 'true'
+      uses: softprops/action-gh-release@v2
       with:
-        name: OFRP-${{ github.event.inputs.DEVICE_NAME }}-${{ github.event.inputs.MANIFEST_BRANCH }}
-        path: |
-          OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.img
-          OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.zip
-          crb-output/*.zip
-        retention-days: 5
+        files: ${{ steps.artifacts.outputs.files }}
+        name: NON-VANILLA OrangeFox [${{ inputs.DEVICE_NAME }}] - ${{ env.BUILD_DATE }}
+        tag_name: ${{ github.run_id }}
+        body: |
+          ## 🏗️ NON-VANILLA Build Information
+          - **Date:** ${{ env.BUILD_DATE }}
+          - **Branch:** ${{ inputs.MANIFEST_BRANCH }}
+          - **Device:** `${{ inputs.DEVICE_NAME }}`
+          - **Target:** `${{ inputs.BUILD_TARGET }}`
+          
+          ## 📚 Source
+          - **Device Tree:** [${{ inputs.DEVICE_TREE }}](${{ inputs.DEVICE_TREE }}/tree/${{ inputs.DEVICE_TREE_BRANCH }})
+          
+          ## ✅ Checksums
+          - **Recovery MD5:** `${{ env.MD5_IMG }}`
+          
+          ## 🚀 NON-VANILLA Features
+          - **FOX_VANILLA_BUILD := 0** (FULL FEATURES ENABLED)
+          - **FOX_AVB := 1**, Samsung, GSI, MagiskBoot, AVB2.0
+          
+          > ⚠️ **NON-VANILLA Automated build** - Test thoroughly!
+        prerelease: false
+        draft: false
+        generate_release_notes: false
 
-    - name: Cleanup
+    - name: Run LDCheck
+      if: env.CHECK_IMG_IS_OK == 'true'
+      run: |
+        echo "::group::🔍 LDCheck Analysis"
+        mkdir -p tools && cd tools
+        wget -q https://github.com/orao/ldcheck/releases/download/v0.1/ldcheck-linux.zip || true
+        unzip -qo ldcheck-linux.zip 2>/dev/null || true
+        mv -n libneeds* ${{ env.FILE_PATH }}/ 2>/dev/null || true
+        mv -n ldcheck ${{ env.FILE_PATH }}/ 2>/dev/null || true
+        cd ${{ env.FILE_PATH }}
+        python3 ldcheck -p "system/lib64:vendor/lib64:system/lib:vendor/lib" -d ${{ inputs.LDCHECK }}
+        echo "::endgroup::"
+      continue-on-error: true
+
+    - name: Cleanup Workspace
       if: always()
       run: |
-        sudo swapoff /swapfile || true
-        sudo rm -f /swapfile
-        echo "✅ Cleanup complete"
+        rm -rf ~/OrangeFox scripts
+        df -h
