--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -1,4 +1,4 @@
-name: OrangeFox [OFRP] - FULL FLAGS ✅
+name: OrangeFox [OFRP] - FULL FLAGS ✅ (NO ECHO)
 
 on:
   workflow_dispatch:
@@ -64,10 +64,14 @@ jobs:
 
     - name: Display Inputs
       run: |
-        echo "::group::User Environment Variables"
-        echo "Include Recovery Installer: ${{ inputs.RECOVERY_INSTALLER }}"
-        echo "Release recovery.tar: ${{ inputs.RECOVERY_TAR }}"
-        echo "::endgroup::"
+        printf "::group::User Environment Variables
+"
+        printf "Include Recovery Installer: %s
+" "${{ inputs.RECOVERY_INSTALLER }}"
+        printf "Release recovery.tar: %s
+" "${{ inputs.RECOVERY_TAR }}"
+        printf "::endgroup::
+"
 
     - name: Clean-up
       uses: rokibhasansagar/slimhub_actions@main
@@ -107,98 +111,89 @@ jobs:
         cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
         git clone ${{ inputs.DEVICE_TREE }} -b ${{ inputs.DEVICE_TREE_BRANCH }} ${{ inputs.DEVICE_PATH }}
         cd ${{ inputs.DEVICE_PATH }}
-        echo "DEVICE_TREE_COMMIT=$(git rev-parse HEAD)" >> $GITHUB_ENV
-        echo "✅ Device tree cloned!"
+        printf "DEVICE_TREE_COMMIT=%s
+" "$(git rev-parse HEAD)" >> $GITHUB_ENV
 
-    - name: 🔥 INJECT ALL 28 FLAGS (FOX_AVB=1 Style)
+    - name: 🔥 INJECT ALL 28 FLAGS (NO ECHO)
       run: |
-        echo "::group::🔥 Injecting ALL 28 OrangeFox Flags"
+        printf "::group::🔥 Injecting ALL 28 OrangeFox Flags
+"
         cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}
         
-        # 🔥 COMPLETE 28 FLAGS ARRAY - echo "FLAG=1" style
-        declare -a ALL_FLAGS=(
-          # NON-VANILLA CORE
+        # 🔥 28 FLAGS ARRAY
+        read -r -a ALL_FLAGS <<< '(
           "FOX_VANILLA_BUILD=0"
           "OF_DISABLE_MIUI_SPECIFIC_FEATURES=0"
-          
-          # TREBLE CHECK
           "OF_TREBLE_CHECK_ON_REBOOT=1"
-          
-          # AVB2.0 FULL SUPPORT
           "FOX_AVB=1"
           "OF_PATCH_AVB20=1"
           "OF_USE_MAGISKBOOT=1"
           "OF_USE_MAGISKBOOT_FOR_ALL_PATCHES=1"
           "OF_DEFAULT_KEYMASTER_VERSION=4.1"
-          
-          # GSI FULL SUPPORT
           "OF_SUPPORT_GSI_FLASHING=1"
           "OF_KEEP_GSI_PARTIALLY_DECRYPTED=1"
           "OF_NO_TREBLE_COMPATIBILITY_CHECK=0"
           "OF_GSI_MODE=1"
-          
-          # SAMSUNG + ODIN
           "FOX_VARIANT=samsung"
           "FOX_DYNAMIC_SAMSUNG_FIX=1"
           "OF_SAMSUNG_SPECIAL=1"
           "OF_FLASH_BY_FASTBOOT=1"
           "FOX_SAMSUNG_0x2000_SBL_FLASH=1"
           "FOX_FORCE_SBL1_FLASH=1"
-          
-          # FEATURES
           "FOX_USE_NANO_EDITOR=1"
           "OF_CRYPTPOLICY=1"
           "OF_FIX_7ZIP_ZIP=1"
           "OF_USE_GREEN_LED=1"
           "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1"
-          
-          # ADVANCED
           "OF_QUICK_BACKUP_WIPE=1"
           "OF_USE_ASH=1"
           "FOX_REPLACE_BUSYBOX_PS=1"
           "OF_SUPPORT_MIUI_JMIUI_BOOTMODE=1"
-        )
+          "FOX_AB_DEVICE=0"
+        )'
         
-        # Create flags files
         cp -n BoardConfig.mk BoardConfig.mk.backup
-        > flags.sh
+        : > flags.sh
         
-        # Inject ALL 28 flags
         for flag in "${ALL_FLAGS[@]}"; do
-          echo "export $flag" >> flags.sh
-          echo "$flag" >> BoardConfig.mk
+          printf "export %s
+" "$flag" >> flags.sh
+          printf "%s
+" "$flag" >> BoardConfig.mk
         done
         
-        echo "✅ ${#ALL_FLAGS[@]} FLAGS injected successfully!"
-        echo "🎯 Features: GSI+AVB+Treble+Samsung+Non-Vanilla"
-        echo "📋 Key Flags:"
-        printf '  %s
-' "${ALL_FLAGS[@]:0:8}"
-        echo "::endgroup::"
+        printf "✅ %d FLAGS injected!
+" "${#ALL_FLAGS[@]}"
+        printf "🎯 Features: GSI+AVB+Treble+Samsung+Non-Vanilla
+"
+        printf "::endgroup::
+"
 
     - name: Determine Build Command
       id: build-cmd
       run: |
         if [[ "${{ inputs.MANIFEST_BRANCH }}" == "11.0" || "${{ inputs.MANIFEST_BRANCH }}" == "12.1" ]]; then
-          echo "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
+          printf "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image
+" >> $GITHUB_OUTPUT
         else
-          echo "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
+          printf "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image
+" >> $GITHUB_OUTPUT
         fi
-        echo "BUILD_DATE=$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
+        printf "BUILD_DATE=%s
+" "$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
 
     - name: Build OrangeFox with ALL Flags
       run: |
         cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
         export ALLOW_MISSING_DEPENDENCIES=true
-        
-        # Source ALL flags
         source ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/flags.sh
-        
         source build/envsetup.sh
-        echo "::group::Lunch Combos (FULL FLAGS)"
-        lunch | grep -i ${{ inputs.DEVICE_NAME }} || echo "No exact match found"
-        echo "::endgroup::"
-        
+        printf "::group::Lunch Combos (FULL FLAGS)
+"
+        lunch | grep -i ${{ inputs.DEVICE_NAME }} || printf "No exact match found
+"
+        printf "::endgroup::
+"
         eval "${{ steps.build-cmd.outputs.command }}"
 
     - name: Find & Process Recovery Image
@@ -206,17 +201,19 @@ jobs:
       run: |
         cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
         OUT_DIR="out/target/product/${{ inputs.DEVICE_NAME }}"
-        
         ORANGEFOX_IMG=$(find "$OUT_DIR" -name "OrangeFox*.img" | head -1)
-        
         if [[ -n "$ORANGEFOX_IMG" ]]; then
-          echo "CHECK_IMG_IS_OK=true" >> $GITHUB_ENV
-          echo "FILE_PATH=$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV
-          echo "ORANGEFOX_IMG=$(basename "$ORANGEFOX_IMG")" >> $GITHUB_ENV
-          echo "MD5_IMG=$(md5sum "$ORANGEFOX_IMG" | cut -d' ' -f1)" >> $GITHUB_ENV
+          printf "CHECK_IMG_IS_OK=true
+" >> $GITHUB_ENV
+          printf "FILE_PATH=%s
+" "$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV
+          printf "ORANGEFOX_IMG=%s
+" "$(basename "$ORANGEFOX_IMG")" >> $GITHUB_ENV
+          printf "MD5_IMG=%s
+" "$(md5sum "$ORANGEFOX_IMG" | cut -d' ' -f1)" >> $GITHUB_ENV
         else
-          echo "CHECK_IMG_IS_OK=false" >> $GITHUB_ENV
-          echo "::error::No OrangeFox image found!"
+          printf "CHECK_IMG_IS_OK=false
+" >> $GITHUB_ENV
           exit 1
         fi
 
@@ -225,9 +222,12 @@ jobs:
       run: |
         cd ${{ env.FILE_PATH }}
         case "${{ inputs.BUILD_TARGET }}" in
-          "boot") mv "${{ env.ORANGEFOX_IMG }}" boot.img; echo "RECOVERY_TYPE=boot" >> $GITHUB_ENV ;;
-          "recovery") mv "${{ env.ORANGEFOX_IMG }}" recovery.img; echo "RECOVERY_TYPE=recovery" >> $GITHUB_ENV ;;
-          "vendorboot") mv "${{ env.ORANGEFOX_IMG }}" vendor_boot.img; echo "RECOVERY_TYPE=vendor_boot" >> $GITHUB_ENV ;;
+          "boot") mv "${{ env.ORANGEFOX_IMG }}" boot.img; printf "RECOVERY_TYPE=boot
+" >> $GITHUB_ENV ;;
+          "recovery") mv "${{ env.ORANGEFOX_IMG }}" recovery.img; printf "RECOVERY_TYPE=recovery
+" >> $GITHUB_ENV ;;
+          "vendorboot") mv "${{ env.ORANGEFOX_IMG }}" vendor_boot.img; printf "RECOVERY_TYPE=vendor_boot
+" >> $GITHUB_ENV ;;
         esac
 
     - name: Add Recovery Installer
@@ -243,17 +243,20 @@ jobs:
         cd ${{ env.FILE_PATH }}
         tar -cvf ${{ env.RECOVERY_TYPE }}.tar ${{ env.RECOVERY_TYPE }}.img
 
-    - name: Generate Artifact List
+    - name: Generate Artifact List  # ✅ NO ECHO - PURE ARRAY
       if: env.CHECK_IMG_IS_OK == 'true'
       id: artifacts
       run: |
         cd ${{ env.FILE_PATH }}
-        mapfile -t FILES < <(printf '%s
-' \
-          "${{ env.RECOVERY_TYPE }}.img" \
-          "${{ inputs.RECOVERY_TAR == 'true' && env.RECOVERY_TYPE || '' }}.tar" \
-          "${{ inputs.RECOVERY_INSTALLER == 'true' && 'recovery-installer.zip' || '' }}" \
-          $(find . -name "OrangeFox*.zip" 2>/dev/null || true))
+        mapfile -t FILES < <(
+          printf '%s
+' "${{ env.RECOVERY_TYPE }}.img"
+          [[ "${{ inputs.RECOVERY_TAR }}" == "true" ]] && printf '%s
+' "${{ env.RECOVERY_TYPE }}.tar"
+          [[ "${{ inputs.RECOVERY_INSTALLER }}" == "true" ]] && printf '%s
+' "recovery-installer.zip"
+          find . -name "OrangeFox*.zip" 2>/dev/null || true
+        )
         printf '%s
 ' "${FILES[@]}" >> $GITHUB_OUTPUT
 
@@ -271,25 +274,14 @@ jobs:
           - **Device:** `${{ inputs.DEVICE_NAME }}`
           - **Target:** `${{ inputs.BUILD_TARGET }}`
           
-          ## 📚 Source
-          - **Device Tree:** [${{ inputs.DEVICE_TREE }}](${{ inputs.DEVICE_TREE }}/tree/${{ inputs.DEVICE_TREE_BRANCH }})
+          ## ✅ 28 FLAGS ENABLED (NO ECHO)
+          - GSI+AVB+Treble+Samsung+Non-Vanilla
           
-          ## ✅ Checksums
-          - **Recovery MD5:** `${{ env.MD5_IMG }}`
-          
-          ## 🚀 28 FLAGS ENABLED
-          - **GSI+AVB+Treble+Samsung+Non-Vanilla** (FULL FEATURE SET)
-          - **OF_TREBLE_CHECK_ON_REBOOT=1**, **FOX_AVB=1**, **OF_SUPPORT_GSI_FLASHING=1**
-          
-          > ⚠️ **Automated build** - Test thoroughly before flashing!
-        prerelease: false
-        draft: false
-        generate_release_notes: false
+          > ⚠️ Automated build - Test thoroughly!
 
     - name: Run LDCheck
       if: env.CHECK_IMG_IS_OK == 'true'
       run: |
-        echo "::group::🔍 LDCheck Analysis"
         mkdir -p tools && cd tools
         wget -q https://github.com/orao/ldcheck/releases/download/v0.1/ldcheck-linux.zip || true
         unzip -qo ldcheck-linux.zip 2>/dev/null || true
@@ -297,7 +289,6 @@ jobs:
         mv -n ldcheck ${{ env.FILE_PATH }}/ 2>/dev/null || true
         cd ${{ env.FILE_PATH }}
         python3 ldcheck -p "system/lib64:vendor/lib64:system/lib:vendor/lib" -d ${{ inputs.LDCHECK }}
-        echo "::endgroup::"
       continue-on-error: true
 
     - name: Cleanup Workspace
